@@ -52,7 +52,9 @@ function t2(a)=(a=a+1;a);t2(2)/2				1 1/2
 4+2/3								4 2/3
 10.1!								(10.1!)
 4^(4/3)								6.34960420787
+4.0^(4/3)							6.34960420787
 4^2.1								18.37917368
+4.0^2.1								18.37917368
 (78+8467i)*(-88754+8784i)					(-81296940-750794966i)
 3i+3								(3+3i)
 3i*3								(0+9i)
@@ -373,6 +375,7 @@ pascal(3)							[1,0,0,0;1,1,0,0;1,2,1,0;1,3,3,1]
 `[[2/2;2;1],[4-1,2]]						`[[1;2;1],[3,2]]
 5^-1								1/5
 5^-2								1/25
+5.0^-1								0.2
 1E+02								100
 7+8 mod 3							3
 -3 mod 5							2
