@@ -1,3 +1,7 @@
+Thu Oct 17 00:50:26 2002  George Lebl <jirka@5z.com>
+
+	* src/mpwrap.c: when reading floats push "C" numeric locale
+
 Wed Oct 16 16:54:03 2002  George Lebl <jirka@5z.com>
 
 	* src/funclib.c: min and max can take multiple arguments, if only one
